--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ pillow==10.2.0
 pluggy==1.0.0
 pycparser==2.21
 Pygments==2.17.2
+pypiwin32==223
+pytest==7.3.2
 python-dotenv==1.0.1
 requests==2.31.0
 soupsieve==2.5
