--- a/requirements.txt
+++ b/requirements.txt
@@ -11,25 +11,16 @@ cryptography==42.0.3
 Django==4.2.10
 django-bootstrap-v5==1.0.11
 docutils==0.20.1
-Flask==3.0.2
 idna==3.6
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
 packaging==23.1
 pillow==10.2.0
 pluggy==1.0.0
 pycparser==2.21
-Pygments==2.17.2
-pypiwin32==223
-pytest==7.3.2
+Python==3.11.5
 python-dotenv==1.0.1
 requests==2.31.0
 soupsieve==2.5
-SpeechRecognition==3.10.1
 sqlparse==0.4.4
-tkcalendar==1.6.1
 typing_extensions==4.10.0
 tzdata==2023.4
 urllib3==2.2.0
