--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ docutils==0.20.1
 gunicorn==21.2.0
 idna==3.6
 MarkupSafe==2.1.5
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 requests==2.31.0
 soupsieve==2.5
